--- a/arraydisplay.html
+++ b/arraydisplay.html
@@ -10,21 +10,21 @@
 
   <body>
     <h2>Our Class</h2>
-      <h4><%= our_class %></h4>
-      <p>Students with less than 5 letters in their name: <%= short_names %></p>
+      <h4>["Sean", "Marie", "Isaiah", "Daniel"]</h4>
+      <p>Students with less than 5 letters in their name: ["Sean"]</p>
     <hr>
     <h2>How Many Words Demo</h2>
-      <h4><%= sentence %></h4>
-      <p><%= word_count %></p>
+      <h4>Ruby is actually kind of fun once you get used to it.</h4>
+      <p>Ruby kind once used</p>
     <hr>
     <h2>Movie Array Info</h2>
       <h4>Movies with a Budget of Less Than 100M</h4>
-        <p><%= cheap_movies %><p>
+        <p>["Forest Gump", "Star Wars"]<p>
       <h4>Movies Starring Leo</h4>
-        <p><%= leo_movies %></p>
+        <p>["Titanic", "Inception"]</p>
       <h4>Total Budget</h4>
-        <p><%= total_budget %></p>
+        <p>576.0</p>
       <h4>Average Budget</h4>
-        <p><%= average_budget %></p>
+        <p>115.2</p>
   </body>
 </html>
